syntax = "proto3";
option go_package = "octavius/internal/pkg/protofiles/client_cp";

import "internal/pkg/protofiles/client_cp/client_info.proto";

// GetLogs service
message RequestForLogs {
    ClientInfo client_info=1;
    string job_name=2;
}

message RequestForGetJobList {
    ClientInfo client_info=1;
}

message JobList {
    repeated string jobs=1;

}

message Log{
    string log=2;
}


// ExecuteJobs service
message RequestForExecute{
    ClientInfo client_info=1;
    string job_name=2;
    map<string,string> job_data=3;
}

message RequestForDescribe{
    ClientInfo client_info=1;
    string job_name=2;
}

message Response {
    string status = 1;
}